Add badges to statistics
