# service-gamification/src/docs/swagger.yaml
@@ -28,6 +28,10 @@ definitions:
     type: object
   models.UserStatistics:
     properties:
+      badges:
+        items:
+          $ref: '#/definitions/models.Badge'
+        type: array
       level:
         type: integer
       level_title:
